tests/ui/compile-fail/pin_data/missing_pin.stderr
error[E0277]: the trait bound `impl PinInit<usize>: Init<usize, _>` is not satisfied
  --> tests/ui/compile-fail/pin_data/missing_pin.rs:12:18
   |
11 | /         pin_init!(Self {
12 | |             a <- a,
   | |                  ^ the trait `Init<usize, _>` is not implemented for `impl PinInit<usize>`
13 | |         })
   | |__________- required by a bound introduced by this call
   |
help: the trait `Init<usize, _>` is not implemented for `impl PinInit<usize>`
      but trait `Init<impl PinInit<usize>, Infallible>` is implemented for it
  --> src/lib.rs
   |
   | unsafe impl<T> Init<T> for T {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `impl PinInit<usize>`, found `usize`
note: required by a bound in `pin_init::__internal::UnpinnedSlot::<'a, T>::init`
  --> src/__internal.rs
   |
   |     pub fn init<E>(self, init: impl Init<T, E>) -> Result<UnpinnedGuard<'a, T>, E> {
   |                                     ^^^^^^^^^^ required by this bound in `UnpinnedSlot::<'a, T>::init`
